feat: DemoController 추가 + 테스트(#26)
- demo는 연구분야로 관리하는게 아니기 때문에 연관관계 없애고 관련 코드들도 삭제
-